# matchlock

./: .gitignore  AGENTS.md  Makefile  README.md  RELEASE.md  go.mod  go.sum  mise.toml
.github/workflows/: ci.yml  python-sdk.yml
cmd/guest-agent/: errors.go  main.go  sandbox_proc.go  sandbox_proc_test.go
cmd/guest-fused/: main.go
cmd/matchlock/: cmd_build.go  cmd_exec.go  cmd_pull.go  cmd_rpc.go  cmd_run.go  errors.go  main.go  setup_linux.go  sysinfo_darwin.go  sysinfo_linux.go
docs/: 0002-macos-backend-implementation.md  SETUP.md
examples/: README.md
examples/agent-client-protocol/: README.md
examples/go/: main.go
examples/playwright/: Dockerfile  README.md  entrypoint.sh
examples/python/: main.py
pkg/api/: config.go  mount.go
pkg/image/: builder.go  builder_darwin.go  builder_linux.go  import.go  store.go
pkg/kernel/: errors.go  kernel.go
pkg/net/: firewalld_linux.go  http.go  nftables.go  stack_darwin.go
pkg/policy/: engine.go  engine_test.go
pkg/rpc/: handler_test.go
pkg/sandbox/: errors.go  exec_relay.go  paths.go  rootfs.go  sandbox_darwin.go  sandbox_linux.go
pkg/sdk/: builder.go  client.go  errors.go  protocol.go
pkg/state/: errors.go  state.go  state_test.go  subnet.go
pkg/vfs/: memory.go  overlay.go  router_test.go  server.go
pkg/vm/: backend.go
pkg/vsock/: errors.go  vsock.go  wire.go
scripts/: build-kernel.sh  build-rootfs.sh  download-kernel.sh  download-rootfs.sh
sdk/python/: pyproject.toml
sdk/python/matchlock/: __init__.py  builder.py  client.py  types.py
tests/acceptance/: cli_test.go  concurrent_test.go
(+4 files in other folders)
